data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_449.wast
;; 10. **Test `nop` in Exception Handling Path with Conditional Branch**: Add a `nop` within a try-catch block leading to a `br_if` that evaluates an exception handling condition. Check that an exception scenario correctly alters control flow without `nop` interference.

(assert_invalid
  (module
    (func (try (result i32)
            (do (nop) (i32.const 1))
            (catch (i32.const 0))
          )
          (result i32)
          (br_if 0 (i32.const 0))
    )
  )
  "type mismatch"
)